# tactile_slip_detector

./: .gitignore  README.md
slip_detection/: CMakeLists.txt  README.md  package.xml  setup.py
slip_detection/bag/: no_slippage.bag  slip_down.bag  slip_up.bag
slip_detection/doc/: intensity_extractor.graphml  slip_detector.graphml  tactile_flow_extractor.graphml
slip_detection/launch/: mean_intensities.launch  mean_intensities.test  sdh_tactile_adapter.launch  sdh_tactile_adapter.test  slip_detector.launch  tactile_flow_extractor.launch  tactile_flow_extractor.test
slip_detection/scripts/: intensity_extractor_node  sdh_tactile_adapter_node  slip_detector_node  tactile_flow_extractor_node
slip_detection/src/slip_detection/: flow_calculator.py  intensity_extractor.py  sdh_tactile_adapter.py  slip_detector.py  slip_detector_utils.py  tactile_flow_extractor.py
slip_detection/test/: test_flow_calculator.py  test_intensity_extractor.py  test_sdh_tactile_adapter.py  test_slip_detector_utils.py  test_tactile_flow_extractor.py
tactile_msgs/: CMakeLists.txt  package.xml
tactile_msgs/msg/: TactileArray.msg  TactileData.msg  TactileFlow.msg  TactileIntensity.msg
tactile_slip_detector/: CMakeLists.txt  package.xml
