<?xml version="1.0"?>
<package>
  <name>slip_detection</name>
  <version>0.1.0</version>
  <description>
    A package to detect a slippage of a grasped object using
    tactile sensor information.
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-yaml</build_depend>
  <build_depend>python-scipy</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tactile_msgs</run_depend>
  <run_depend>schunk_sdh</run_depend>
  <test_depend>unittest</test_depend>

</package>
